...
        android:textAlignment="center"
        android:lineHeight="@dimen/keyline_4"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginEnd="@dimen/keyline_8"  />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_unavailable_dialog_continue_button"
        android:layout_marginTop="@dimen/keyline_6"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginEnd="@dimen/keyline_8"
...
