...
        android:text="Have a look at how we store and protect Your data and accept our privacy policy and terms of service before continuing"
        app:layout_constraintTop_toBottomOf="@id/onboarding_step_4_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accept"
        app:layout_constraintTop_toBottomOf="@id/onboarding_step_4_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
