...
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginEnd="@dimen/keyline_8"
        app:layout_constraintTop_toBottomOf="@id/onboarding_step_1_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/get_started_button"/>

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
...
